# Simple-BOt-Human

./: Cargo.toml  README.md
src/: chat.rs  clear.rs  colors.rs  config.rs  input.rs  main.rs  user_variable.rs
