[package]
name = "Simple-BOt-Human"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release] # optimize for faster
opt-level = 3         # Max optimization (speed)
lto = true            # Link Time Optimization (smaller and faster binary)
codegen-units = 1     # Slower to compile, but allows more optimizations
panic = 'abort'       # Removes "panic" handling code to save space
strip = true          # Removes debug symbols (makes the .exe much smaller)